# restapi/operations/competition/get_competition_by_id_responses.go
@@ -1,0 +1,126 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package competition
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/krezac/los-server/models"
+)
+
+// GetCompetitionByIDOKCode is the HTTP code returned for type GetCompetitionByIDOK
+const GetCompetitionByIDOKCode int = 200
+
+/*GetCompetitionByIDOK successful operation
+
+swagger:response getCompetitionByIdOK
+*/
+type GetCompetitionByIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Competition `json:"body,omitempty"`
+}
+
+// NewGetCompetitionByIDOK creates GetCompetitionByIDOK with default headers values
+func NewGetCompetitionByIDOK() *GetCompetitionByIDOK {
+
+	return &GetCompetitionByIDOK{}
+}
+
+// WithPayload adds the payload to the get competition by Id o k response
+func (o *GetCompetitionByIDOK) WithPayload(payload *models.Competition) *GetCompetitionByIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get competition by Id o k response
+func (o *GetCompetitionByIDOK) SetPayload(payload *models.Competition) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCompetitionByIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetCompetitionByIDBadRequestCode is the HTTP code returned for type GetCompetitionByIDBadRequest
+const GetCompetitionByIDBadRequestCode int = 400
+
+/*GetCompetitionByIDBadRequest Invalid ID supplied
+
+swagger:response getCompetitionByIdBadRequest
+*/
+type GetCompetitionByIDBadRequest struct {
+}
+
+// NewGetCompetitionByIDBadRequest creates GetCompetitionByIDBadRequest with default headers values
+func NewGetCompetitionByIDBadRequest() *GetCompetitionByIDBadRequest {
+
+	return &GetCompetitionByIDBadRequest{}
+}
+
+// WriteResponse to the client
+func (o *GetCompetitionByIDBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(400)
+}
+
+// GetCompetitionByIDNotFoundCode is the HTTP code returned for type GetCompetitionByIDNotFound
+const GetCompetitionByIDNotFoundCode int = 404
+
+/*GetCompetitionByIDNotFound Shooting range not competition
+
+swagger:response getCompetitionByIdNotFound
+*/
+type GetCompetitionByIDNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIResponse `json:"body,omitempty"`
+}
+
+// NewGetCompetitionByIDNotFound creates GetCompetitionByIDNotFound with default headers values
+func NewGetCompetitionByIDNotFound() *GetCompetitionByIDNotFound {
+
+	return &GetCompetitionByIDNotFound{}
+}
+
+// WithPayload adds the payload to the get competition by Id not found response
+func (o *GetCompetitionByIDNotFound) WithPayload(payload *models.APIResponse) *GetCompetitionByIDNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get competition by Id not found response
+func (o *GetCompetitionByIDNotFound) SetPayload(payload *models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCompetitionByIDNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
