# restapi/operations/competition/get_competitions_html_responses.go
@@ -1,0 +1,101 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package competition
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/krezac/los-server/models"
+)
+
+// GetCompetitionsHTMLOKCode is the HTTP code returned for type GetCompetitionsHTMLOK
+const GetCompetitionsHTMLOKCode int = 200
+
+/*GetCompetitionsHTMLOK successful operation
+
+swagger:response getCompetitionsHtmlOK
+*/
+type GetCompetitionsHTMLOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.HTMLResponse `json:"body,omitempty"`
+}
+
+// NewGetCompetitionsHTMLOK creates GetCompetitionsHTMLOK with default headers values
+func NewGetCompetitionsHTMLOK() *GetCompetitionsHTMLOK {
+
+	return &GetCompetitionsHTMLOK{}
+}
+
+// WithPayload adds the payload to the get competitions Html o k response
+func (o *GetCompetitionsHTMLOK) WithPayload(payload *models.HTMLResponse) *GetCompetitionsHTMLOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get competitions Html o k response
+func (o *GetCompetitionsHTMLOK) SetPayload(payload *models.HTMLResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCompetitionsHTMLOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetCompetitionsHTMLInternalServerErrorCode is the HTTP code returned for type GetCompetitionsHTMLInternalServerError
+const GetCompetitionsHTMLInternalServerErrorCode int = 500
+
+/*GetCompetitionsHTMLInternalServerError Retrieving list of ranges failed
+
+swagger:response getCompetitionsHtmlInternalServerError
+*/
+type GetCompetitionsHTMLInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload string `json:"body,omitempty"`
+}
+
+// NewGetCompetitionsHTMLInternalServerError creates GetCompetitionsHTMLInternalServerError with default headers values
+func NewGetCompetitionsHTMLInternalServerError() *GetCompetitionsHTMLInternalServerError {
+
+	return &GetCompetitionsHTMLInternalServerError{}
+}
+
+// WithPayload adds the payload to the get competitions Html internal server error response
+func (o *GetCompetitionsHTMLInternalServerError) WithPayload(payload string) *GetCompetitionsHTMLInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get competitions Html internal server error response
+func (o *GetCompetitionsHTMLInternalServerError) SetPayload(payload string) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCompetitionsHTMLInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
